--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fire-base-auth",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -14,6 +15,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "firebase": "^9.19.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -32,7 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint src",
-    "prettier": "prettier --write src"
+    "prettier": "prettier --write src",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
